graph1 в